infra/kube/dev-tools/ci/drone/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone
  labels:
    purpose: drone
  namespace: dev-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      purpose: drone
  template:
    metadata:
      labels:
        purpose: drone
    spec:
      securityContext:
      volumes:
      - name: db-secret
        secret:
          secretName: db-secret
      - name: ssl-root
        secret:
          secretName: ssl-root
      containers:
      - name: drone
        image: drone/drone:2
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: ssl-root
          mountPath: /etc/ssl/certs/root.crt
          subPath: tls.crt
