infra/kube/dev-tools/ci/drone/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone
  namespace: dev-tools
  labels:
    purpose: drone
spec:
  type: ClusterIP
  selector:
    purpose: drone
  ports:
  - port: 80
    targetPort: 80
    name: http
  - port: 443
    name: https
